# Tensorvia

./: .gitignore  CMakeLists.txt  LICENSE  README-CN.md  README.md  build.py  buildspv.py  relu.sh
cmake/: Tensorvia.cmake.in
include/core/: context.h  factory.h  ops.h  tensor.h  type_traits.h  types.h
shader/: fill_float32.comp  relu_float32.comp  relu_float64.comp  relu_int16.comp
shader/abs/: abs_bfloat16.comp  abs_float16.comp  abs_float32.comp  abs_float64.comp  abs_int16.comp  abs_int32.comp  abs_int64.comp  abs_int8.comp
shader/add/: add_bfloat16.comp  add_float16.comp  add_float32.comp  add_float64.comp  add_int16.comp  add_int32.comp  add_int64.comp  add_int8.comp  addvec_bfloat16.comp  addvec_float16.comp  addvec_float32.comp  addvec_float64.comp  addvec_int16.comp  addvec_int32.comp  addvec_int64.comp  addvec_int8.comp
shader/all/: all_bfloat16.comp  all_float16.comp  all_float32.comp  all_float64.comp  all_int16.comp  all_int32.comp  all_int64.comp  all_int8.comp
shader/any/: any_bfloat16.comp  any_float16.comp  any_float32.comp  any_float64.comp  any_int16.comp  any_int32.comp  any_int64.comp  any_int8.comp
shader/argmax/: argmax_bfloat16.comp  argmax_float16.comp  argmax_float32.comp  argmax_float64.comp  argmax_int16.comp  argmax_int32.comp  argmax_int64.comp  argmax_int8.comp
shader/argmin/: argmin_bfloat16.comp  argmin_float16.comp  argmin_float32.comp  argmin_float64.comp  argmin_int16.comp  argmin_int32.comp  argmin_int64.comp  argmin_int8.comp
shader/clamp/: clamp_bfloat16.comp  clamp_float16.comp  clamp_float32.comp  clamp_float64.comp  clamp_int16.comp  clamp_int32.comp  clamp_int64.comp  clamp_int8.comp
shader/concat/: concatAdd_float32.comp  concat_add_float32.comp  concat_bfloat16.comp  concat_float16.comp  concat_float32.comp  concat_float64.comp  concat_int16.comp  concat_int32.comp  concat_int64.comp  concat_int8.comp
shader/cos/: cos_bfloat16.comp  cos_float16.comp  cos_float32.comp  cos_float64.comp
shader/div/: div_bfloat16.comp  div_float16.comp  div_float32.comp  div_float64.comp  div_int16.comp  div_int32.comp  div_int64.comp  div_int8.comp  divvec_bfloat16.comp  divvec_float16.comp  divvec_float32.comp  divvec_float64.comp  divvec_int16.comp  divvec_int32.comp  divvec_int64.comp  divvec_int8.comp
shader/dot/: dot_bfloat16.comp  dot_float16.comp  dot_float32.comp  dot_float64.comp  dot_int16.comp  dot_int32.comp  dot_int64.comp  dot_int8.comp  dotvec_bfloat16.comp  dotvec_float16.comp  dotvec_float32.comp  dotvec_float64.comp  dotvec_int16.comp  dotvec_int32.comp  dotvec_int64.comp  dotvec_int8.comp
shader/equal/: equal_bfloat16.comp  equal_float16.comp  equal_float32.comp  equal_float64.comp  equal_int16.comp  equal_int32.comp  equal_int64.comp  equal_int8.comp
shader/exp/: exp_bfloat16.comp  exp_float16.comp  exp_float32.comp  exp_float64.comp
shader/fill/: fill_bfloat.comp  fill_bfloat16.comp  fill_float16.comp  fill_float32.comp  fill_float64.comp  fill_int16.comp  fill_int32.comp  fill_int64.comp  fill_int8.comp
shader/greater/: greater_bfloat16.comp  greater_float16.comp  greater_float32.comp  greater_float64.comp  greater_int16.comp  greater_int32.comp  greater_int64.comp  greater_int8.comp
shader/greater_equal/: greater_equal_bfloat16.comp  greater_equal_float16.comp  greater_equal_float32.comp  greater_equal_float64.comp  greater_equal_int16.comp  greater_equal_int32.comp  greater_equal_int64.comp  greater_equal_int8.comp
shader/less/: less_bfloat16.comp  less_float16.comp  less_float32.comp  less_float64.comp  less_int16.comp  less_int32.comp  less_int64.comp  less_int8.comp
shader/less_equal/: less_equal_bfloat16.comp  less_equal_float16.comp  less_equal_float32.comp  less_equal_float64.comp  less_equal_int16.comp  less_equal_int32.comp  less_equal_int64.comp  less_equal_int8.comp
shader/log/: log_bfloat16.comp  log_float16.comp  log_float32.comp  log_float64.comp
shader/matmul/: matmul_bfloat16.comp  matmul_float16.comp  matmul_float32.comp  matmul_float64.comp  matmul_int16.comp  matmul_int32.comp
shader/max/: max_bfloat16.comp  max_float16.comp  max_float32.comp  max_float64.comp  max_int16.comp  max_int32.comp  max_int64.comp  max_int8.comp  maxvec_bfloat16.comp  maxvec_float16.comp  maxvec_float32.comp  maxvec_float64.comp  maxvec_int16.comp  maxvec_int32.comp  maxvec_int64.comp  maxvec_int8.comp
shader/mean/: mean_bfloat16.comp  mean_float16.comp  mean_float32.comp  mean_float64.comp  mean_int16.comp  mean_int32.comp  mean_int64.comp  mean_int8.comp
shader/min/: min_bfloat16.comp  min_float16.comp  min_float32.comp  min_float64.comp  min_int16.comp  min_int32.comp  min_int64.comp  min_int8.comp  minvec_bfloat16.comp  minvec_float16.comp  minvec_float32.comp  minvec_float64.comp  minvec_int16.comp  minvec_int32.comp  minvec_int64.comp  minvec_int8.comp
shader/mul/: mul_bfloat16.comp  mul_float16.comp  mul_float32.comp  mul_float64.comp  mul_int16.comp  mul_int32.comp  mul_int64.comp  mul_int8.comp
shader/nonzero/: nonzero_bfloat16.comp  nonzero_float16.comp  nonzero_float32.comp  nonzero_float64.comp  nonzero_int16.comp  nonzero_int32.comp  nonzero_int64.comp  (+1 more)
shell/: main.py
spv/: add_bfloat16.spv  add_float16.spv  add_float32.spv  add_float64.spv  add_int16.spv  add_int32.spv  add_int64.spv  add_int8.spv  addvec_bfloat16.spv  addvec_float16.spv  addvec_float32.spv  addvec_float64.spv  addvec_int16.spv  addvec_int32.spv  addvec_int64.spv  addvec_int8.spv  dot_bfloat16.spv  dot_float16.spv  dot_float32.spv  dot_float64.spv  dot_int16.spv  dot_int32.spv  dot_int64.spv  dot_int8.spv  dotvec_bfloat16.spv  dotvec_float16.spv  dotvec_float32.spv  dotvec_float64.spv  dotvec_int16.spv  dotvec_int32.spv  dotvec_int64.spv  dotvec_int8.spv  fill_bfloat16.spv  fill_float16.spv  fill_float32.spv  fill_float64.spv  fill_int16.spv  fill_int32.spv  fill_int64.spv  fill_int8.spv  (+32 more)
src/: factory.cpp  init.cpp  ops.cpp  tensor.cpp
tests/: activate.cpp  argmax.cpp  compare.cpp  concat.cpp  init.cpp  math.cpp  mul.cpp  reduce.cpp  slice.cpp  transpose.cpp  view.cpp  vulkantest.cpp
(+218 files in other folders)
